# mailServerClient

./: CMakeLists.txt  Command.h  README.md  Socket.cpp  Socket.h  SocketException.h  StringUtil.cpp  StringUtil.h  mailclient  mailserver
client/: ClientService.cpp  ClientService.h  ClientSocket.cpp  ClientSocket.h  StringUtil.cpp  StringUtil.h  main.cpp
exception/: IllegalCommandException.h
mytest/: main.cpp
server/: LoginService.cpp  LoginService.h  MailService.cpp  MailService.h  ServerSocket.cpp  ServerSocket.h  main.cpp
shared/exception/: ClientSideException.h  IllegalCommandException.h  IllegalMessageFormatException.h
shared/socket/: Socket.cpp  Socket.h  SocketException.h
shared/util/: StringUtil.cpp  StringUtil.h
